hphp/test/slow/readonly/inout_readonly.php
<?hh
class Foo {}
function foo(
  inout readonly Foo $x // error
): void {
}
